--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,9 +1,29 @@
 pipeline {
     agent any
     stages {
-        stage ("Greeting"){
+        stage ("Clean up"){
             steps {
-                bat 'echo "helloo!!!"'
+                bat 'del /Q /S C:\\Users\\Nadine Ziedi\\.jenkins\\workspace\\astonvilla\\*'
+                bat 'dir C:\\Users\\Nadine Ziedi\\.jenkins\\workspace\\astonvilla'
+            }
+        }
+        stage ("Clone repo"){
+            steps {
+                bat "git clone https://github.com/nadineziadi/astonvilla-stage.git"
+            }
+        }
+        stage ("Generate docker image") {
+            steps {
+                dir("astonvilla-app"){
+                    bat "docker build -t nadineziadi/astonvilla-app:1.1.%BUILD_NUMBER% ."
+                }
+            }
+        }
+        stage ("Push docker image") {
+            steps {
+                dir("astonvilla-app"){
+                    bat "docker push nadineziadi/astonvilla-app:1.1.%BUILD_NUMBER%"
+                }
             }
         }
     }
