--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,30 +1,13 @@
 pipeline {
     agent any 
     stages {
-        stage("Clean up") {
+        stage ("Greetings!"){
             steps {
-                bat 'powershell -Command "Remove-Item -LiteralPath \'C:\\Users\\Nadine Ziedi\\.jenkins\\workspace\\astonvilla\\*\' -Force -Recurse"'
+                sh 'echo "hiiiiiii!"'
             }
         }
-        stage("Clone repo") {
-            steps {
-                bat 'git clone https://github.com/Raouf-Rhimi/astonvilla-app.git'
-            }
-        }
-        stage("Generate docker image") {
-            steps {
-                dir("astonvilla-app") {
-                    bat 'docker build -t kakachisensei/astonvilla-app:1.1.${env.BUILD_NUMBER} .'
-                }
-            }
-        }
-        stage("Push docker image") {
-            steps {
-                dir("astonvilla-app") {
-                    bat 'docker push kakachisensei/astonvilla-app:1.1.${env.BUILD_NUMBER}'
-                }
-            }
+       
         }
     }
-}
+
 
