--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,7 @@
 pipeline {
     agent any 
     stages {
+stage('Checkout') { steps { git url: 'https://github.com/nadineziadi/astonvilla-stage.git', credentialsId: 'astonvilla-token' } } 
         stage ("Greetings!"){
             steps {
                 sh 'echo "hiiiiiii!"'
